--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Arthur Stark</a>.
+        Coded by <a href="https://github.com/art5551/order_summary_component_main.git">Arthur Stark</a>.
       </div>
     </main>
   </body>
